# NixOS-Configuration

./: .gitignore  README.md  blue.sh  boot-windows.sh  fix-wlroots-switch.patch  flake.nix  home.nix  purple.sh  red.sh  rice.sh  ricing.sh  wallpaper.sh
.config/: kcminputrc  kglobalshortcutsrc  kwinrc  plasmashellrc
.config/cava/: config
.config/fastfetch/: config.jsonc
.config/kitty/: weather.sh  work-session.conf  work.conf
.config/sway/: config
.config/vis/: config
.configbak/: kdeglobals  kwinrulesrc
.configbak/kitty/: kitty.conf  sys_info.sh
.configbak/sptlrx/: config.yaml
ZenithWM/compositor/: input.h  meson.build  xdg_shell.c  xdg_shell.h
ZenithWM/monitor-config/: main.c  monitor_config.h
ZenithWM/nix/: default.nix
ZenithWM/session/: zenithwm.desktop
ZenithWM/taskbar/: clock.h
nixos/: configuration.nix  core.nix  desktop.nix  gaming.nix  hardware-configuration.nix  network.nix  nixconsole.nix  packages.nix  users.nix
nixos/ZenithWM/: README.md  meson.build  zenith.cpp
nixos/ZenithWM/compositor/: input.c  main.c  output.c  output.h  server.c  server.h
nixos/ZenithWM/config/: desktop.conf  keys.conf  zenithwm.conf
nixos/ZenithWM/monitor-config/: meson.build  monitor_config.c
nixos/ZenithWM/nix/: default.nix  module.nix
nixos/ZenithWM/session/: zenithwm-session  zenithwm.desktop
nixos/ZenithWM/taskbar/: clock.c  main.c  meson.build  settings_win.c  settings_win.h  startmenu.c  startmenu.h  taskbar.c  taskbar.h
nixos/pkgs/: cli-visualizer.nix
scripts/: gaming.sh  hotspot.sh  rice.sh  ricing.sh  wallpaper.sh  winboot.sh
zenith/: .gitignore  CMakeLists.txt  LICENSE  README.md  default.nix  flake.nix  hm-module.nix  meson.build  package.nix  zenith.desktop
zenith/config/: autostart  zenith.conf
zenith/include/: config.h  desktop.h  input.h  keybinds.h  launcher.h  monitor_settings.h  output.h  settings_panel.h  taskbar.h  window.h  zenith.h
zenith/nixos/: example-configuration.nix  example-home.nix  home-manager.nix  module.nix  zenith-sddm.desktop  zenith.desktop
zenith/scripts/: build.sh  fetch-protocols.sh
zenith/src/: config.c  desktop.c  input.c  keybinds.c  launcher.c  monitor_settings.c  output.c  settings_panel.c  taskbar.c  window.c  zenith.c
